deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petcare-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: petcare
  template:
    metadata:
      labels:
        app: petcare
    spec:
      containers:
      - name: petcare-container
        image: gowthamkumarks/petcare-app:latest
        ports:
        - containerPort: 5000
