service.yml
apiVersion: v1
kind: Service
metadata:
  name: petcare-service
spec:
  type: NodePort
  selector:
    app: petcare
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30007
